public/styles/layout.css
html,
body {
  margin: 0;
  padding: 0;
  background: #f5f5f5;
  -webkit-print-color-adjust: exact;
}

.page {
  max-width: 1000px;
  margin: 20px auto;
  background: #fff;
  box-shadow: rgba(0, 0, 0, 0.07) 0 2px 5px;
}

@page {
  size: auto;
  margin: 0mm;
}

@media print {
  .page {
    max-width: auto;
    box-shadow: none;
  }
}

section {
  display: block;
  padding: 15px 0;
}

.ruled {
  border-bottom: 1px solid #f5f5f5;
}

section h2,
thead h2 {
  margin-bottom: 20px;
}

.single-column {
  padding: 0 30px;
}

.split-columns {
  display: flex;
  flex-direction: row;
  padding: 20px 30px 0;
}

.split-columns .column-left {
  width: 55%;
}

.split-columns .column-right {
  flex: 1;
  margin-left: 20px;
}

.section-talks {
  page-break-before: always;
}

